Overview of changes in lightdm 1.0.8

    * Fix compilation against gthread

Overview of changes in lightdm 1.0.7

    * Drop privileges when reading ~/.dmrc
    * Fix crash calling lightdm_get_layout

Overview of changes in lightdm 1.0.6

    * Use lchown for correcting ownership of ~/.Xauthority instead of chown

Overview of changes in lightdm 1.0.5

    * Relax AppArmor guest profile to allow compiz to start
    * Connect up VNC settings for width, height, depth

Overview of changes in lightdm 1.0.4

    * Fix --enable-gtk-greeter=yes not working
    * Fix X sessions with arguments in Exec not working
    * Use previous session for automatic login or if greeter does not request
      one.
    * Correct ownership of ~/.Xauthority if upgrading from buggy version of
      LightDM that had it root owned.
    * Set default resolution of VNC to 1024x768, add settings for width, height,
      depth into lightdm.conf.
    * AppArmor profile: Fix broken gnome-keyring and dbus/gwibber, and quiesce
      annoying kernel audit messages for privileges that we definitively do not
      want to grant.
    * Set LOGNAME environment variable

Overview of changes in lightdm 1.0.3

    * Fix reference counting issue in ConsoleKit code
    * Really add the lightdm-guest-session-wrapper

Overview of changes in lightdm 1.0.2

    * Fix daemon from blocking if Accounts Service does not exist
    * Fix greeter log file not being written
    * Don't set LANG environment variable if using Accounts Service.
    * Fix gdmflexiserver not working due to it not being in PATH
    * Don't authenticate the greeter user
    * Allow greeters to be disabled in configure flags
    * Fix over allocation of read buffer in greeter protocol
    * Make sure objects are cleaned up on exit
    * Fix minor memory leaks
    * Fix hugely oversized allocation in greeter buffer.  Can trigger
      crashes when entering very long passwords.

Overview of changes in lightdm 1.0.1
