@@ -1,6 +1,8 @@
 Overview of changes in lightdm 1.0.8
 
     * Fix compilation against gthread
+    * Change session directory once user permissions are set so it works
+      on NFS filesystems that don't allow root to access files.
 
 Overview of changes in lightdm 1.0.7
 
